[package]
name = "gobgob-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
pcap = { version = "1.1.0", features = ["all-features"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
time = "0.3.22"
tokio = { version = "1.28.2", features = ["full"] }
